pamc/src/tests/sample_code/should_fail/type_check/wrong_number_of_arguments/type.ph
type U {
    .U: U,
}

type V(t: U) {}

let foo = V(U.U, U.U);
